--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
         <!-- END: Runtime dependencies -->
         
