--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.cismet.cids</groupId>
     <artifactId>cids-server</artifactId>
-    <version>2.0-UBA</version>
+    <version>2.1-UBA-SNAPSHOT</version>
     <packaging>jar</packaging>
  
     <properties>
@@ -36,7 +36,7 @@
         <connection>https://github.com/cismet/cids-server.git</connection>
         <developerConnection>scm:git:git@github.com:cismet/cids-server.git</developerConnection>
         <url>https://github.com/cismet/cids-server</url>
-      <tag>v2.0-UBA</tag>
+      <tag>HEAD</tag>
   </scm>
     
     <issueManagement>
