#235 introduction of the table cs_changed

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -25,3 +25,7 @@ get_all_class_permissions=SELECT ug.name AS ug_name, d.name AS domainname, cp.pe
 get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id AS ug_id ,d.name AS ls FROM cs_ug_method_perm AS p, cs_method AS m, cs_ug AS u, cs_domain AS d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
 get_attribute_info=SELECT a.*, ts.qualifier AS toStringString, e.qualifier AS editor_class, s.qualifier AS from_string_class, ce.qualifier AS complexeditorclass FROM cs_attr AS a LEFT OUTER JOIN cs_java_class AS e ON (editor = e.id) LEFT OUTER JOIN cs_java_class AS s ON (from_string = s.id) LEFT OUTER JOIN cs_java_class AS ce ON (complex_editor = ce.id) LEFT OUTER JOIN cs_java_class AS ts ON (a.tostring = ts.id) ORDER BY a.class_id, a.pos
 supports_scheduled_server_actions=SELECT 't' FROM information_schema.tables WHERE table_schema = 'public' AND lower(table_name) = 'cs_scheduled_serveractions'
+update_cs_changed_object_entry=update cs_changed set "time" = now() where class_id = ? and object_id = ?
+update_cs_changed_class_entry=update cs_changed set "time" = now() where class_id = ? and object_id = 0
+insert_cs_changed_object_entry=insert into cs_changed (class_id, object_id, "time") values (?, ?, now())
+insert_cs_changed_class_entry=insert into cs_changed (class_id, object_id, "time") values (?, 0, now())
