--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,22 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>16.2</version>
+        </dependency>
+
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.4</version>
