--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             <dependency>
                 <groupId>de.cismet</groupId>
                 <artifactId>cismet-ext-bom</artifactId>
-                <version>7.2</version>
+                <version>7.2.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -55,13 +55,13 @@
             <dependency>
                 <groupId>de.cismet.commons</groupId>
                 <artifactId>cismet-commons</artifactId>
-                <version>7.2.6</version>
+                <version>7.2.7</version>
                 <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>de.cismet.commons</groupId>
                 <artifactId>cismet-commons</artifactId>
-                <version>7.2.6</version>
+                <version>7.2.7</version>
                 <type>test-jar</type>
             </dependency>
             <dependency>
@@ -182,7 +182,7 @@
             <artifactId>jasperreports</artifactId>
         </dependency>    
         <dependency>
-            <groupId>org.postgis</groupId>
+            <groupId>net.postgis</groupId>
             <artifactId>postgis-jdbc</artifactId>
             <type>jar</type>
             <scope>compile</scope>
@@ -269,9 +269,9 @@
             <version>2.6</version>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.1-903.jdbc4</version>
+            <version>42.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
