--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -5,10 +5,10 @@ fetch_config_attr_user_value=SELECT value FROM cs_config_attr_value WHERE id = (
 fetch_config_attr_ug_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_ug ON cs_config_attr_jt.ug_id = cs_ug.id LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_config_attr_jt.usr_id IS NULL AND cs_ug.name LIKE ? AND cs_domain.name LIKE ? AND key_id = ?)
 fetch_config_attr_domain_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_config_attr_jt.usr_id IS NULL AND cs_config_attr_jt.ug_id IS NULL AND cs_domain.name LIKE ? AND key_id = ?)
 fetch_config_attr_exempt_value=SELECT ug_id FROM cs_config_attr_exempt WHERE usr_id = ? AND key_id = ?
-fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC
-fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
-insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
-has_history=SELECT count(class_id) FROM cs_history WHERE class_id = ? AND object_id = ?
+fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_key = ? AND object_id = ? ORDER BY valid_from DESC
+fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_key = ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
+insert_history_entry=INSERT INTO cs_history (class_key, object_id, usr_key, ug_key, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
+has_history=SELECT count(class_id) FROM cs_history WHERE class_key = ? AND object_id = ?
 table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid FROM pg_class WHERE relname = ?) AND attname = ?
 delete_cacheentry=delete from cs_cache where class_id=? and object_id=?
 insert_cacheentry=SELECT insert_cache_entry(?,?)
