--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,18 @@
             <artifactId>org-openide-util-lookup</artifactId>
             <version>RELEASE701</version>
         </dependency>
+        <dependency>
+            <groupId>de.cismet.custom</groupId>
+            <artifactId>cismet-JUMP1.5</artifactId>
+            <version>7.0</version>
+            <scope>compile</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
         
         <!-- BEGIN: Runtime dependencies -->
         <!--
