--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -8,9 +8,9 @@ fetch_config_attr_exempt_value=SELECT ug_id FROM cs_config_attr_exempt WHERE usr
 fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_key ILIKE ? AND object_id = ? ORDER BY valid_from DESC
 fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_key ILIKE ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
 insert_history_entry=INSERT INTO cs_history (class_key, object_id, usr_key, ug_key, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
-has_history=SELECT count(class_id) FROM cs_history WHERE class_key ILIKE ? AND object_id = ?
+has_history=SELECT count(*) FROM cs_history WHERE class_key ILIKE ? AND object_id = ?
 table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid FROM pg_class WHERE relname = ?) AND attname = ?
-delete_cacheentry=delete from cs_cache where class_id=? and object_id=?
+delete_cacheentry=delete from cs_cache where class_key=? and object_id=?
 insert_cacheentry=SELECT insert_cache_entry(?,?)
 update_cacheentry=SELECT update_cache_entry(?,?)
 get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, ug.prio AS prio, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
