--- a/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
@@ -9,7 +9,7 @@ fetch_config_attr_exempt_value=SELECT ug_id FROM cs_config_attr_exempt WHERE usr
 fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_key ILIKE ? AND object_id = ? ORDER BY valid_from DESC
 insert_history_entry=INSERT INTO cs_history (class_key, object_id, usr_key, ug_key, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
 has_history=SELECT count(class_key) FROM cs_history WHERE class_key ILIKE ? AND object_id = ?
-delete_cacheentry=delete from cs_cache where class_id=? and object_id=?
+delete_cacheentry=delete from cs_cache where class_key=? and object_id=?
 insert_cacheentry=call insert_cache_entry(?,?)
 update_cacheentry=call update_cache_entry(?,?)
 
@@ -20,9 +20,9 @@ get_all_methods=SELECT * FROM cs_method
 get_all_images=SELECT * FROM cs_icon
 get_all_users=SELECT id, login_name, password, last_pwd_change, administrator FROM cs_usr
 get_all_memberships=SELECT login_name, ug.name ug, 'LOCAL' ugDomain FROM cs_ug_membership m, cs_usr u, cs_ug ug WHERE u.id = m.usr_id AND ug.id = m.ug_id
-get_all_class_permissions=SELECT ug.name ug_name, d.name domainname, cp.permission, p.key, cp.class_id, cp.ug_id ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug ug, cs_domain d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
+get_all_class_permissions=SELECT ug.name ug_name, d.name domainname, cp.permission, p.key, cp.class_key, cp.ug_id ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug ug, cs_domain d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
 get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id ug_id ,d.name ls FROM cs_ug_method_perm p, cs_method m, cs_ug u, cs_domain d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
-fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id ILIKE ? AND object_id = ? AND rownum <= ? ORDER BY valid_from DESC
+fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_key ILIKE ? AND object_id = ? AND rownum <= ? ORDER BY valid_from DESC
 table_has_column=SELECT column_name FROM all_tab_cols WHERE lower(table_name) = lower(?) AND lower(column_name) = lower(?)
 get_all_classes=SELECT c.id, c.name, descr, class_icon_id, object_icon_id, table_name, primary_key_field, indexed, toStringClass.qualifier toStringQualifier, EditorClass.qualifier EditorQualifier, RendererClass.qualifier RendererQualifier, c.array_link, c.policy, c.attribute_policy FROM cs_class c LEFT OUTER JOIN cs_java_class toStringClass ON (c.tostring = toStringClass.id) LEFT OUTER JOIN cs_java_class EditorClass ON (c.editor = EditorClass.id) LEFT OUTER JOIN cs_java_class RendererClass ON (c.renderer = RendererClass.id)
 change_user_password=UPDATE cs_usr SET password = ?, last_pwd_change = current_timestamp WHERE lower(login_name) = ? AND lower(password) = ?
