issue #297 cs_cache, class_id => class_key, and replaced = with ILIKE

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -24,11 +24,11 @@ change_user_password=UPDATE cs_usr SET pw_hash =  md5(salt||?), last_pwd_change 
 get_all_class_permissions=SELECT ug.name AS ug_name, d.name AS domainname, cp.permission, p.key, cp.class_id, cp.ug_id AS ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug AS ug, cs_domain AS d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
 get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id AS ug_id ,d.name AS ls FROM cs_ug_method_perm AS p, cs_method AS m, cs_ug AS u, cs_domain AS d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
 get_attribute_info=SELECT a.*, ts.qualifier AS toStringString, e.qualifier AS editor_class, s.qualifier AS from_string_class, ce.qualifier AS complexeditorclass FROM cs_attr AS a LEFT OUTER JOIN cs_java_class AS e ON (editor = e.id) LEFT OUTER JOIN cs_java_class AS s ON (from_string = s.id) LEFT OUTER JOIN cs_java_class AS ce ON (complex_editor = ce.id) LEFT OUTER JOIN cs_java_class AS ts ON (a.tostring = ts.id) ORDER BY a.class_id, a.pos
-supports_scheduled_server_actions=SELECT 't' FROM information_schema.tables WHERE table_schema = 'public' AND lower(table_name) = 'cs_scheduled_serveractions'
-update_cs_changed_object_entry=update cs_changed set "time" = now() where class_id = ? and object_id = ?
-update_cs_changed_class_entry=update cs_changed set "time" = now() where class_id = ? and object_id = 0
-insert_cs_changed_object_entry=insert into cs_changed (class_id, object_id, "time") values (?, ?, now())
-insert_cs_changed_class_entry=insert into cs_changed (class_id, object_id, "time") values (?, 0, now())
+supports_scheduled_server_actions=SELECT 't' FROM information_schema.tables WHERE table_schema = 'public' AND table_name ILIKE 'cs_scheduled_serveractions'
+update_cs_changed_object_entry=update cs_changed set "time" = now() where class_key ilike ? and object_id = ?
+update_cs_changed_class_entry=update cs_changed set "time" = now() where class_key = ? and object_id = 0
+insert_cs_changed_object_entry=insert into cs_changed (class_key, object_id, "time") values (?, ?, now())
+insert_cs_changed_class_entry=insert into cs_changed (class_key, object_id, "time") values (?, 0, now())
 get_all_cs_cs_config_attr=SELECT cs_config_attr_key.key, cs_config_attr_type."type" ,cs_config_attr_value."value",cs_config_attr_value."filename", cs_usr.id uid, cs_usr.login_name,cs_ug."name" as ug_name,cs_domain."name" as domain_name FROM cs_config_attr_jt LEFT JOIN cs_usr ON cs_config_attr_jt.usr_id = cs_usr.id LEFT JOIN cs_ug ON cs_config_attr_jt.ug_id = cs_ug.id LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id LEFT JOIN cs_config_attr_key ON cs_config_attr_jt.key_id = cs_config_attr_key.id LEFT JOIN cs_config_attr_value ON cs_config_attr_value.id = cs_config_attr_jt.val_id LEFT JOIN cs_config_attr_type on cs_config_attr_type.id = cs_config_attr_jt.type_id order by 1
 cs_config_attr_exempt=select cs_usr.login_name, cs_config_attr_key.key, cs_ug."name" from cs_config_attr_exempt LEFT JOIN cs_usr ON cs_config_attr_exempt.usr_id = cs_usr.id LEFT JOIN cs_ug ON cs_config_attr_exempt.ug_id = cs_ug.id LEFT JOIN cs_config_attr_key ON cs_config_attr_exempt.key_id = cs_config_attr_key.id
 
