--- a/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
@@ -20,11 +20,11 @@ get_all_methods=SELECT * FROM cs_method
 get_all_images=SELECT * FROM cs_icon
 get_all_users=SELECT id, login_name, password, last_pwd_change, administrator FROM cs_usr
 get_all_memberships=SELECT login_name, ug.name ug, 'LOCAL' ugDomain FROM cs_ug_membership m, cs_usr u, cs_ug ug WHERE u.id = m.usr_id AND ug.id = m.ug_id
-get_all_class_permissions=SELECT ug.name ug_name, d.name domainname, cp.permission, p.key, cp.class_key, cp.ug_id ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug ug, cs_domain d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
+get_all_class_permissions=SELECT ug.name ug_name, d.name domainname, cp.permission, p.key, cp.class_id, cp.ug_id ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug ug, cs_domain d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
 get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id ug_id ,d.name ls FROM cs_ug_method_perm p, cs_method m, cs_ug u, cs_domain d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
 fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_key ILIKE ? AND object_id = ? AND rownum <= ? ORDER BY valid_from DESC
-table_has_column=SELECT column_name FROM all_tab_cols WHERE lower(table_name) = lower(?) AND lower(column_name) = lower(?)
+table_has_column=SELECT column_name FROM all_tab_cols WHERE table_name ILIKE ? AND column_name ILIKE ?
 get_all_classes=SELECT c.id, c.name, descr, class_icon_id, object_icon_id, table_name, primary_key_field, indexed, toStringClass.qualifier toStringQualifier, EditorClass.qualifier EditorQualifier, RendererClass.qualifier RendererQualifier, c.array_link, c.policy, c.attribute_policy FROM cs_class c LEFT OUTER JOIN cs_java_class toStringClass ON (c.tostring = toStringClass.id) LEFT OUTER JOIN cs_java_class EditorClass ON (c.editor = EditorClass.id) LEFT OUTER JOIN cs_java_class RendererClass ON (c.renderer = RendererClass.id)
 change_user_password=UPDATE cs_usr SET password = ?, last_pwd_change = current_timestamp WHERE lower(login_name) = ? AND lower(password) = ?
 get_attribute_info=SELECT a.*, ts.qualifier toStringString, e.qualifier editor_class, s.qualifier from_string_class, ce.qualifier complexeditorclass FROM cs_attr a LEFT OUTER JOIN cs_java_class e ON (editor = e.id) LEFT OUTER JOIN cs_java_class s ON (from_string = s.id) LEFT OUTER JOIN cs_java_class ce ON (complex_editor = ce.id) LEFT OUTER JOIN cs_java_class ts ON (a.tostring = ts.id) ORDER BY a.class_id, a.pos
-supports_scheduled_server_actions=SELECT 't' FROM user_tables WHERE lower(table_name) = 'cs_scheduled_serveractions'
+supports_scheduled_server_actions=SELECT 't' FROM user_tables WHERE table_name ILIKE 'cs_scheduled_serveractions'
