--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,11 @@
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
         
         <!-- BEGIN: Runtime dependencies -->
         <!--
